--- a/nb_lr_pt/Makefile
+++ b/nb_lr_pt/Makefile
@@ -78,7 +78,7 @@ POST_UNINSTALL = :
 subdir = .
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
 	$(top_srcdir)/configure $(am__configure_deps) \
-	$(srcdir)/config.h.in depcomp install-sh missing
+	$(srcdir)/config.h.in README depcomp install-sh missing
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -188,12 +188,12 @@ distuninstallcheck_listfiles = find . -type f -print
 am__distuninstallcheck_listfiles = $(distuninstallcheck_listfiles) \
   | sed 's|^\./|$(prefix)/|' | grep -v '$(infodir)/dir$$'
 distcleancheck_listfiles = find . -type f -print
-ACLOCAL = ${SHELL} /home/012/j/jx/jxl173630/CS6375/Homework2/missing aclocal-1.13
+ACLOCAL = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt/missing aclocal-1.13
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /home/012/j/jx/jxl173630/CS6375/Homework2/missing autoconf
-AUTOHEADER = ${SHELL} /home/012/j/jx/jxl173630/CS6375/Homework2/missing autoheader
-AUTOMAKE = ${SHELL} /home/012/j/jx/jxl173630/CS6375/Homework2/missing automake-1.13
+AUTOCONF = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt/missing autoconf
+AUTOHEADER = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt/missing autoheader
+AUTOMAKE = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt/missing automake-1.13
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -218,7 +218,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/012/j/jx/jxl173630/CS6375/Homework2/missing makeinfo
+MAKEINFO = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt/missing makeinfo
 MKDIR_P = /usr/bin/mkdir -p
 OBJEXT = o
 PACKAGE = full-package-name
@@ -233,10 +233,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = VERSION
-abs_builddir = /home/012/j/jx/jxl173630/CS6375/Homework2
-abs_srcdir = /home/012/j/jx/jxl173630/CS6375/Homework2
-abs_top_builddir = /home/012/j/jx/jxl173630/CS6375/Homework2
-abs_top_srcdir = /home/012/j/jx/jxl173630/CS6375/Homework2
+abs_builddir = /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt
+abs_srcdir = /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt
+abs_top_builddir = /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt
+abs_top_srcdir = /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -255,7 +255,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/012/j/jx/jxl173630/CS6375/Homework2/install-sh
+install_sh = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/nb_lr_pt/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
