update em initialization to bagging

--- a/bayesian_networks/src/Makefile
+++ b/bayesian_networks/src/Makefile
@@ -149,12 +149,12 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/missing aclocal-1.13
+ACLOCAL = ${SHELL} /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/missing aclocal-1.13
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/missing autoconf
-AUTOHEADER = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/missing autoheader
-AUTOMAKE = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/missing automake-1.13
+AUTOCONF = ${SHELL} /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/missing autoconf
+AUTOHEADER = ${SHELL} /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/missing autoheader
+AUTOMAKE = ${SHELL} /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/missing automake-1.13
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -164,8 +164,8 @@ CPPFLAGS =
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-ECHO_C = 
-ECHO_N = -n
+ECHO_C = \c
+ECHO_N = 
 ECHO_T = 
 EGREP = /usr/bin/grep -E
 EXEEXT = 
@@ -179,8 +179,8 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = -lm 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/missing makeinfo
-MKDIR_P = /usr/bin/mkdir -p
+MAKEINFO = ${SHELL} /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/missing makeinfo
+MKDIR_P = .././install-sh -c -d
 OBJEXT = o
 PACKAGE = full-package-name
 PACKAGE_BUGREPORT = BUG-REPORT-ADDRESS
@@ -194,10 +194,10 @@ SET_MAKE =
 SHELL = /bin/sh
 STRIP = 
 VERSION = VERSION
-abs_builddir = /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/src
-abs_srcdir = /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/src
-abs_top_builddir = /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks
-abs_top_srcdir = /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks
+abs_builddir = /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/src
+abs_srcdir = /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/src
+abs_top_builddir = /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks
+abs_top_srcdir = /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -216,7 +216,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/012/j/jx/jxl173630/CS6375/ml/bayesian_networks/install-sh
+install_sh = ${SHELL} /Users/judy/GraduateStudy/UTD/Spring2018/CS6375.502-MachineLearning/Homeworks/ml/bayesian_networks/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
